@startuml
hide circle
skinparam classAttributeIconSize 0

class Saving {
  + saveAllDecks(Map<String, Deck>)
  + saveDeck(String, Deck)
  + deleteDeckFile(String)
  + renameDeckFile(String, String)
}

class Loading {
  + loadAllDecks(): Map<String, Deck>
}

class DeckManager {
  + static Map<String, Deck> decks
}

class Deck {
  + getFlashcards(): List<Flashcard>
}

class Flashcard {
  + getQuestion(): String
  + getAnswer(): String
  + getIsLearnedAsString(): String
}

Saving --> DeckManager
Saving --> Deck
Deck --> Flashcard
Loading --> DeckManager
@enduml